fix: font on Safari

--- a/src/assets/styles/typography.sass
+++ b/src/assets/styles/typography.sass
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700')
-
 body
   font-size: 1.2rem
-  font-family: Nunito, sans-serif
+  font-family: 'Nunito', sans-serif
 
 a
   font-weight: bold
